--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -28,6 +28,7 @@ on early-init
 
 on init
     # setup the global environment
+    export LD_LIBRARY_PATH /vendor/lib:/system/lib:/system/lib/ste_omxcomponents
     export OMX_STE_ENS_COMPONENTS_DIR /system/lib/ste_omxcomponents/
     export OMX_BELLAGIO_LOADER_REGISTRY /system/etc/omxloaders
     
