init: preload STE symbols library
Change-Id: Ia595bfaae3f6de77f5491c5a7cb82b0305923f3a

--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -8,6 +8,7 @@ on early-init
 
 on init
     # setup the global environment
+    export LD_PRELOAD "/system/lib/libste_symbols.so"
     export LD_LIBRARY_PATH /vendor/lib:/system/lib:/system/lib/ste_omxcomponents
     export OMX_STE_ENS_COMPONENTS_DIR /system/lib/ste_omxcomponents/
     export OMX_BELLAGIO_LOADER_REGISTRY /system/etc/omxloaders
