montblanc-common: Set ro.vold.primary_physical
* We have a separate internal storage partition,
  don't use emulated storage on top of our small /data partition

Change-Id: I4fccc856047333a843a73e44facaa9cc50e654d0

--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -17,6 +17,9 @@ on init
     symlink /sdcard /mnt/sdcard
     symlink /sdcard /storage/sdcard0
 
+    # By default, primary storage is physical
+    setprop ro.vold.primary_physical 1
+
     mkdir /modemfs 0771 system system
 
     # Shared memory file system
