--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -15,7 +15,7 @@ on init
 
     # Support legacy paths
     symlink /sdcard /mnt/sdcard
-    symlink /sdcard /storage/sdcard0
+    symlink /sdcard /storage/sdcard
 
     # By default, primary storage is physical
     setprop ro.vold.primary_physical 1
